fix(core): incorrect content header z-index

--- a/resources/skins.citizen.styles/Stickyheader.less
+++ b/resources/skins.citizen.styles/Stickyheader.less
@@ -17,7 +17,6 @@
 .citizen-body-header--sticky {
 	.mw-body-header {
 		position: sticky;
-		z-index: 1;
 		top: 0;
 		align-items: center;
 		padding-bottom: var( --space-md );
